--- a/PetAppointmentScheduler/Assets/Base.lproj/Main.storyboard
+++ b/PetAppointmentScheduler/Assets/Base.lproj/Main.storyboard
@@ -18,19 +18,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1G7-lX-F19">
-                                <rect key="frame" x="87" y="197" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1G7-lX-F19">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="YfU-Zf-Abt"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="I10-IK-Mjc"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="1G7-lX-F19" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="71a-ij-9Ve"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="1G7-lX-F19" secondAttribute="bottom" id="Plq-is-EcJ"/>
+                            <constraint firstItem="1G7-lX-F19" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="yl5-ix-vYb"/>
+                            <constraint firstItem="1G7-lX-F19" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="z16-h1-q5B"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="1G7-lX-F19" id="xKb-if-cRp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-35" y="29"/>
+            <point key="canvasLocation" x="-36.231884057971016" y="28.794642857142854"/>
         </scene>
     </scenes>
 </document>
